--- a/styleSheet.css
+++ b/styleSheet.css
@@ -1,3 +1,7 @@
+body {
+	text-align: center;
+}
+
 #canvas {
 	height: 500px;
 	width: 500px;
@@ -8,4 +12,19 @@
 	display: inline-block;
 	float: left;
 	box-sizing: border-box;
+}
+
+.outline {
+	border : 1px dotted grey;
+}
+
+.title {
+	font-size: 2.5em;
+	margin: 20px;
+	display: block;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.btn-group {
+	margin: 30px;
 }
