--- a/styleSheet.css
+++ b/styleSheet.css
@@ -1,5 +1,6 @@
 body {
 	text-align: center;
+	background-color: #EEE;
 }
 
 #canvas {
@@ -12,6 +13,8 @@ body {
 	display: inline-block;
 	float: left;
 	box-sizing: border-box;
+	line-height: 0px;
+	background-color: white;
 }
 
 .outline {
